test/expected/dynamic_cast_pi.out
dynamic cast x into pointer to int
                    ^
21: error: dynamic_cast type must be a pointer or reference to a class, struct, or union
